[package]
name = "timetracker-ruuvi-listener"
version = "0.1.0"
authors = ["Samuli Suortti <samuli.suortti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
blurz = "0.4.0"
ruuvi-sensor-protocol = "0.4.1"
unix_socket = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
